--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Reverie
+name: Causal Inference with Machine Learning
 
 # Name of the author
-author: Amit Merchant
+author: Allison Towey
 
 # Short bio or description (displayed in the header)
-description: An elegant Jekyll theme
+description: A Causal Inference 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/reverie.png
@@ -21,15 +21,15 @@ avatar: /images/reverie.png
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: amit.d.merchant@gmail.com
+  email: allisontowey@gmail.com
   facebook:
   flickr:
-  github: amitmerchant1990/reverie
+  github: atowey-uchi/causal_inference_with_ML
   instagram:
   linkedin: 
   pinterest:
   rss: rss
-  twitter: amit_merchant
+  twitter: 
   stackoverflow: 
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -48,14 +48,14 @@ google_analytics: UA-43339302-11
 
 # Your website URL (e.g. http://amitmerchant1990.github.io or http://www.amitmerchant.com)
 # Used for Sitemap.xml and your RSS feed
-url: http://www.amitmerchant.com/reverie
-enforce_ssl: https://www.amitmerchant.com/reverie
+url: http://atowey-uchi.github.io/causal_inference_with_ML
+enforce_ssl: http://atowey-uchi.github.io/causal_inference_with_ML
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/reverie"
+baseurl: "/causal_inference_with_ML"
 
 #
 # !! You don't need to change any of the configuration flags below !!
